# small-language-model

./: .gitignore  pyproject.toml
LM_basics/: embedding.py  full_transformer.py  linear.py  pre_norm_block.py
text_generating/: inference.py
tokenizer/: BPE_trainer.py  fast_tokenizer.py  merges.pkl  save_tokens.py  tokenizer.py  vocab.pkl
training/: config.yaml  loader_and_checkpoint.py  loss_and_optimizer.py  training_loop.py
