[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment1-basics"
version = "0.1.0"
description = "Assignment 1 Basics Project"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "torch==2.8.0",
    "numpy",
    "pyyaml",
    "regex",
    "jaxtyping",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["LM_basics*", "tokenizer*", "training*", "text_generating*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
